manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-app-service
spec:
  selector:
    app: status-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
